Removed AbsoluteTranslate phase from apriltag targeting. fixed an issue with resultList method not existing